# OpenAIRealtimeTransport

./: .env.example  QUICKSTART.md  README.en.md  README.md  SILICONFLOW.md  config.py  main.py  pipeline_manager.py  protocol.py  push_to_talk_app.py  pyproject.toml  realtime_session.py  requirements.txt  service_providers.py  transport.py
docs/: QUICKSTART.md  README.en.md  SILICONFLOW.md
scripts/: push_to_talk_app.py  test_client.py
src/openai_realtime_transport/: __init__.py  app.py  audio_utils.py  config.py  logger_config.py  pipeline_manager.py  protocol.py  realtime_session.py  service_providers.py  transport.py
static/: audio-worklet.js  index.html  settings.html
tests/: conftest.py  test_config.py
